--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.2.0",
+    "bootstrap": "^5.2.3",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "@popperjs/core": "^2.10.2",
+    "@rails/actioncable": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "5.4.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "sweetalert": "^2.1.2",
+    "turbolinks": "^5.2.0",
+    "typed.js": "^2.0.12",
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
